apps/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: linuxserver/sabnzbd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
            - name: downloads
              mountPath: /downloads
            - name: sabnzbd-config-pvc
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: sabnzbd-downloads-pvc
        - name: sabnzbd-config-pvc
          persistentVolumeClaim:
            claimName: sabnzbd-config-pvc
        - name: sabnzbd-config-template
          configMap:
            name: sabnzbd-config
            items:
              - key: sabnzbd.ini
                path: sabnzbd.ini
