apps/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-service
  namespace: sabnzbd
spec:
  selector:
    app: sabnzbd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
