apps/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: sabnzbd
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: sabnzbd.cl.flylab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd-service
                port:
                  number: 8080
